--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # Assets that can be found in the Unity Package Manager
 [Aa]ssets/Plugins/Package Manager*
 
+# Rider cache directory
+.idea/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
